--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Learning git is Good</h1>
+    <h1 style="color:red">Learning git is Good</h1>
 </body>
 </html>
